--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "contants",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://enn-ko.gihub.io/fs-contact",
   "type": "module",
   "scripts": {
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
